--- a/src/main/resources/jdbc.connect/jdbc.connect.properties
+++ b/src/main/resources/jdbc.connect/jdbc.connect.properties
@@ -3,5 +3,5 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/cakes_shop?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 #jdbc.url=jdbc:mysql://localhost:3306/cakes_shop
-jdbc.name=root
+jdbc.userName=root
 jdbc.pass=root
