--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>${my.hibernate}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${my.hibernate}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
             <groupId>javax.servlet</groupId>
